# Call-Me-Maybe

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  test2.json  test3.json
data/input/: function_calling_tests.json
src/: __init__.py  __main__.py  load_from_json.py  model.py
src/parsing/: arguments.py  functions.py  prompts.py
