[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "llm_sdk",
    "accelerate>=1.13.0",
]
[tool.uv.sources]
llm_sdk = {path="./llm_sdk", editable = true}
